<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">NMediaNew</string>
    <string name="author">Netology. University of Internet Professions of the Future</string>
    <string name="date_and_time_of_publication">May 21 at 18:36</string>
    <string name="content">Hello, this is the new Netology! Netology once began with intensive courses in online marketing. Then courses appeared in design, development, analytics and management. We grow ourselves and help students grow: from beginners to confident professionals. But the most important thing remains with us: we believe that everyone already has the power that makes them want more, aim higher, run faster. Our mission is to help them get on the path to growth and start a chain of changes→ http://netolo.gy/fyb</string>
    <string name="volume_of_views" translatable="false">700</string>
    <string name="Volume_of_share" translatable="false">100</string>
    <string name="volume_of_likes" translatable="false">500</string>
</resources>