<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="@dimen/avatar_size_width"
        android:layout_height="@dimen/avatar_size_height"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/netology" />

    <TextView
        android:id="@+id/author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:ellipsize="end"
        android:paddingStart="15dp"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/date_and_time_of_publication"
        app:layout_constraintEnd_toStartOf="@id/menu"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toTopOf="@+id/avatar"
        android:text="@string/author" />

    <TextView
        android:id="@+id/date_and_time_of_publication"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/paddingStart"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/avatar"
        app:layout_constraintEnd_toStartOf="@id/menu"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toBottomOf="@id/author"
        android:text="@string/date_and_time_of_publication" />


    <ImageView
        android:id="@+id/menu"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:src="@drawable/more_vert_48"
        app:tint="?colorControlNormal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />



    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/header_Barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="avatar,date_and_time_of_publication,menu"
        app:barrierDirection="bottom"
        />

    <TextView
        android:id="@+id/text_of_the_publication"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:autoLink="web"
        android:layout_marginTop="@dimen/paddingStart"
        android:layout_marginBottom="@dimen/paddingStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_Barrier"
        app:layout_constraintBottom_toTopOf="@+id/lower_Barrier"
        android:text="@string/content" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/lower_Barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="text_of_the_publication"
        app:barrierDirection="bottom"
        />

    <ImageView
        android:id="@+id/likes"
        android:layout_width="@dimen/SymbolSize"
        android:layout_height="@dimen/SymbolSize"
        android:src="@drawable/baseline_favorite_24"
        app:tint="?colorControlNormal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lower_Barrier"
        android:layout_marginTop="@dimen/paddingStart"
        />

    <TextView
        android:id="@+id/volume_of_likes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/volume_of_likes"
        app:layout_constraintStart_toEndOf="@id/likes"
        app:layout_constraintTop_toBottomOf="@id/lower_Barrier"
        android:layout_marginTop="@dimen/paddingStart"
        android:layout_marginStart="@dimen/indentForNumbers"
        />

    <ImageView
        android:id="@+id/shares"
        android:layout_width="@dimen/SymbolSize"
        android:layout_height="@dimen/SymbolSize"
        android:src="@drawable/baseline_share_24"
        app:tint="?colorControlNormal"
        app:layout_constraintStart_toEndOf="@id/volume_of_likes"
        app:layout_constraintTop_toBottomOf="@id/lower_Barrier"
        android:layout_marginTop="@dimen/paddingStart"
        android:layout_marginStart="@dimen/betweenSymbols"
        />

    <TextView
        android:id="@+id/volume_of_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Volume_of_share"
        app:layout_constraintStart_toEndOf="@id/shares"
        app:layout_constraintTop_toBottomOf="@id/lower_Barrier"
        android:layout_marginTop="@dimen/paddingStart"
        android:layout_marginStart="@dimen/NormalSpace"
        />

    <TextView
        android:id="@+id/volume_of_views"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/volume_of_views"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lower_Barrier"
        android:layout_marginTop="@dimen/paddingStart"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="@dimen/indentForNumbers"
        />

    <ImageView
        android:id="@+id/views"
        android:layout_width="@dimen/SymbolSize"
        android:layout_height="@dimen/SymbolSize"
        android:src="@drawable/baseline_remove_red_eye_24"
        app:tint="?colorControlNormal"
        app:layout_constraintEnd_toStartOf="@id/volume_of_views"
        app:layout_constraintTop_toBottomOf="@id/lower_Barrier"
        android:layout_marginTop="@dimen/paddingStart"
        />

</androidx.constraintlayout.widget.ConstraintLayout>